# llm-debate

./: .gitignore  LICENSE  README.md  pyproject.toml
llm_debate/: __init__.py  cli.py  orchestrator.py  participant.py
tests/: test_cli.py  test_orchestrator.py  test_participant.py
