[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-debate"
version = "0.1.0"
description = "Orchestrate multi-round debates between LLM CLI tools"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
llm-debate = "llm_debate.cli:main"
